Man warning corrected in loghub.receivers.Http